--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,15 @@ dependencies {
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    // Data binding
+    // Live data
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.0'
+    // View Model
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0'
-
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
+    // Retrofit with Moshi Converter
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
